--- a/src/html/index.html
+++ b/src/html/index.html
@@ -4,7 +4,6 @@
 	<meta charset='utf-8'>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href='./main.css' rel='stylesheet'>
-	<script src='./turbolinksInit/turbolinksInit.js' defer></script>
 </head>
 <body>
 	<div class="F">
@@ -16,7 +15,7 @@
 				<img id="card_logo" src="../assets/card_logo.svg"/>
 			</div>
 			<div id="yourMeeting">
-				Your Meeting with <span id="yourMeeting_docName">Dr. Jayalakshmi</span> is in:
+				Your Meeting with <span id="yourMeeting_docName">Dr. {{doctorName}}</span> is in:
 			</div>
 			<div id="yourTimer">
 				<span id="yourTimer_time">5</span> hours
@@ -33,7 +32,7 @@
 	<div id="yourPattern">
 		<img src="../assets/pattern.svg">
 	</div>
-	<script src='./main/main.js' defer></script>
+	<!-- <script src='./main/main.js' defer></script> -->
 </body>
 
 </html>
