--- a/src/html/index.html
+++ b/src/html/index.html
@@ -14,7 +14,7 @@
 				
 			</div>
 			<div class="logo">
-				<img id="card_logo" src="../assets/card_logo.svg"/>
+				<img id="card_logo" src="./assets/card_logo.svg"/>
 			</div>
 			<div id="yourMeeting">
 				Your Meeting with <span id="yourMeeting_docName">Dr. {{doctorName}}</span> is in:
@@ -28,13 +28,13 @@
 			<a :href=`https://meet.jit.si/${jitsi.uid}`>
 			<div id="yourCall" >
 				<div id="yourCall_content">
-					Go To Meeting <img id="yourCall_arrow" src="../assets/arrow.svg">
+					Go To Meeting <img id="yourCall_arrow" src="./assets/arrow.svg">
 				</div>
 			</div>
 			</a>
 	</div>
 	<div id="yourPattern">
-		<img src="../assets/pattern.svg">
+		<img src="./assets/pattern.svg">
 	</div>
 	<script src='./main.js' defer></script> 
 </body>
